@@ -44,6 +44,7 @@ VERSION 4.2.0
 
 ?$pgv_lang["whatever"]                dd Monthname, year		Change codes and comments
 -----------------------------------------------------------------------------------------
++$pgv_lang["ged_export"] 						  17 Dec 2008           A
 +$pgv_lang["tradition_polish"]        21 Nov 2008           A
 
 VERSION 4.1.6
